--- a/p2 test/index.html
+++ b/p2 test/index.html
@@ -11,17 +11,23 @@
    <link href="https://fonts.googleapis.com/css2?family=Open+Sans+Condensed:wght@300&display=swap" rel="stylesheet">
  </head>
  <body>
-   <main id="menu"><div class="hero">
-     <h1>Menu</h1>
-   </div>
-   <div class="hero2">
-      <h1>Bakery</h1>
-  </div>
-      <div class="section"></div>
-      <div class="section"></div>
-      <div class="section"></div>
-    <div class="section"></div>
-   </div>
+   <main id="menu">
+     <div class="hero">
+       <h1>Menu</h1>
+     </div>
+     <div class="hero2">
+        <h1>Bakery</h1>
+      </div>
+      <div class="whole">
+        <div class="column">
+          <div class="section"></div>
+          <div class="section"></div>
+        </div>
+        <div class="column">
+          <div class="section"></div>
+          <div class="section"></div>
+        </div>
+      </div>
   </main>
  </body>
 </html>
