--- a/p2/menu/index.html
+++ b/p2/menu/index.html
@@ -5,13 +5,11 @@
    <title>Menu</title>
    <meta name="viewport" content="width=device-width, initial-scale=1">
    <link rel="stylesheet" href="../css/main.css">
-   <!<link href="https://fonts.googleapis.com/css2?family=Roboto&display=swap" rel="stylesheet">
-  <! <link href="https://fonts.googleapis.com/css2?family=Playfair+Display:wght@700&display=swap" rel="stylesheet">
-   <!<link rel="stylesheet" href="https://use.typekit.net/hzl4xcz.css">
    <link rel="preconnect" href="https://fonts.gstatic.com">
    <link rel="preconnect" href="https://fonts.gstatic.com">
    <link href="https://fonts.googleapis.com/css2?family=Roboto:wght@300;400;500&display=swap" rel="stylesheet">
    <link href="https://fonts.googleapis.com/css2?family=Open+Sans+Condensed:wght@300&display=swap" rel="stylesheet">
+    <link rel="stylesheet" href="https://use.typekit.net/hzl4xcz.css">
  </head>
  <body>
    <header>
@@ -28,131 +26,158 @@
      <div class="hero">
        <h1>Menu</h1>
      </div>
-     <div class="hero2">
-        <h1>Bakery</h1>
-      </div>
-      <div class="section">
-        <h2>Breads</h2>
-        <div class="underline"></div>
-        <h3>Focaccia………………………………………………$8</h3>
-        <p>Rustic Italian Bread………………………………………………$7</p>
-        <p>Sourdough Bread………………………………………………$7</p>
-        <p>French Baguette………………………………………………$4</p>
-        <p>Croissant………………………………………………$2</p>
-        <p>Bagel………………………………………………$2</p>
-      </div>
-      <div class="section">
-        <h2>Pastries</h2>
-        <h3>Sicilian Cannoli………………………………………………$5</h3>
-        <h3>Panettone………………………………………………$6</h3>
-        <h3>Zeppole………………………………………………$4</h3>
-        <h3>Sfogliatella………………………………………………$4</h3>
-        <h3>Bombolone………………………………………………$4</h3>
-        <h3>Pies………………………………………………Slice-$3 Whole-$15</h3>
-        <p>Apple, Cherry, Blueberry, Pumpkin, Pecan</p>
-      </div>
-      <div class="section">
-        <h2>Cakes</h2>
-        <p>Tiramisu………………………………………………Slice-$3 Whole-$15</p>
-        <p>Zuccotto………………………………………………Slice-$3 Whole-$15</p>
-        <p>Cassata………………………………………………Slice-$3 Whole-$15</p>
-        <p>Torta Paradiso………………………………………………Slice-$3 Whole-$15</p>
-      </div>
-      <div class="section">
-        <h2>Cookies</h2>
-        <h3>Biscotti………………………………………………$5 for a Dozen</h3>
-        <p>Almond, Pistachio, Hazelnut Chocolate, Orange-Cranberry, Double Chocolate</p>
-        <h3>Chocolate Chip Cookies………………………………………………$5 for a Dozen</h3>
-        <h3>Sugar Cookies………………………………………………$5 for a Dozen</h3>
-        <h3>Macaroons………………………………………………$5 for a Dozen</h3>
-        <p>Vanilla, Strawberry, Chocolate, Pistachio, Coffee</p>
+     <div class="break"></div>
+      <div class="part">
+       <div class="hero2">
+          <h1>Bakery</h1>
+        </div>
+        <div class="break"></div>
+        <div class="column">
+          <div class="section">
+            <h2>Breads</h2>
+            <h3>Focaccia……………………………………………………$8</h3>
+            <h3>Rustic Italian Bread………………………………………$7</h3>
+            <h3>Sourdough Bread……………………………………………$7</h3>
+            <h3>French Baguette……………………………………………………$4</h3>
+            <h3>Croissant………………………………………………………………$2</h3>
+            <h3>Bagel………………………………………………………………$2</h3>
+          </div>
+          <div class="section">
+            <h2>Pastries</h2>
+            <h3>Sicilian Cannoli………………………………………………$5</h3>
+            <h3>Panettone………………………………………………$6</h3>
+            <h3>Zeppole………………………………………………$4</h3>
+            <h3>Sfogliatella………………………………………………$4</h3>
+            <h3>Bombolone………………………………………………$4</h3>
+            <h3>Pies………………………………………………Slice-$3 Whole-$15</h3>
+            <p>Apple, Cherry, Blueberry, Pumpkin, Pecan</p>
+          </div>
+        </div>
+        <div class="column">
+          <div class="section">
+            <h2>Cakes</h2>
+            <p>Tiramisu………………………………………………Slice-$3 Whole-$15</p>
+            <p>Zuccotto………………………………………………Slice-$3 Whole-$15</p>
+            <p>Cassata………………………………………………Slice-$3 Whole-$15</p>
+            <p>Torta Paradiso………………………………………………Slice-$3 Whole-$15</p>
+          </div>
+          <div class="section">
+            <h2>Cookies</h2>
+            <h3>Biscotti………………………………………………$5 for a Dozen</h3>
+            <p>Almond, Pistachio, Hazelnut Chocolate, Orange-Cranberry, Double Chocolate</p>
+            <h3>Chocolate Chip Cookies………………………………………………$5 for a Dozen</h3>
+            <h3>Sugar Cookies………………………………………………$5 for a Dozen</h3>
+            <h3>Macaroons………………………………………………$5 for a Dozen</h3>
+            <p>Vanilla, Strawberry, Chocolate, Pistachio, Coffee</p>
+           </div>
+         </div>
+         <div class="break"></div>
        </div>
-       <div class="hero3">
+       <div class="part">
+       <div class="img">
+         <img src="../images/coffee.jpg"> <alt="coffee on wood table">
+       </div>
          <h1>Drinks</h1>
        </div>
-       <div class="section">
-            <h2>Coffee</h2>
-            <p>Hot or Cold</p>
-            <h3>Espresso………………………………………………S:$3, M:$3.50, L:$4</h3>
-            <h3>Cappuccino………………………………………………S:$5, M:$5.50, L:$6</h3>
-            <h3>Ristretto………………………………………………S:$5, M:$5.50, L:$6</h3>
-            <h3>Caffe Americano………………………………………………S:$2, M:$2.50, L:$3</h3>
-            <h3>Macchiato………………………………………………S:$3, M:$3.50, L:$4</h3>
-            <h3>Mocha………………………………………………S:$6, M:$6.50, L:$7</h3>
-            <h3>Latte………………………………………………S:$7, M:$7.50, L:$8</h3>
-      </div>
-      <div class="section">
-            <h2>Juices</h2>
-            <h3>Orange………………………………………………S:$2, M:$2.50, L:$3</h3>
-            <h3>Apple………………………………………………S:$3, M:$3.50, L:$4</h3>
-            <h3>Grape………………………………………………S:$4, M:$4.50, L:$5</h3>
-      </div>
-      <div class="section">
-            <h2>Tea</h2>
-            <p>Hot or Cold</p>
-            <h3>Black Tea………………………………………………S:$3, M:$3.50, L:$4</h3>
-            <h3>Green Tea………………………………………………S:$3, M:$3.50, L:$4</h3>
-            <h3>Raspberry Tea………………………………………S:$3, M:$3.50, L:$4</h3>
-            <h3>Chamomile Tea………………………………………S:$3, M:$3.50, L:$4</h3>
-            <h3>Oolong Tea………………………………………………S:$2, M:$2.50, L:$3</h3>
-            <h3>Mint Tea………………………………………………S:$3, M:$3.50, L:$4</h3>
-            <h3>Jasmine Tea……………………………………………S:$3, M:$3.50, L:$4</h3>
-            <h3>Milk Tea………………………………………………S:$3, M:$3.50, L:$4</h3>
-      </div>
-      <div class="hero4">
-        <h1>Meals</h1>
-      </div>
-      <div class="section">
-         <h2>Entrées</h2>
-         <h3>Hearty Breakfast……………………………$10</h3>
-         <p>Eggs, bacon, beans, cheese, blood sausage, toast</p>
-         <h3>Brushcetta……………………………$10</h3>
-         <h3>Lasagna……………………………$10</h3>
-         <h3>Stuffed shells……………………………$10</h3>
-         <h3>Risotto……………………………$10</h3>
-         <h3>Salad……………………………$10</h3>
-         <p>Caprese, Chicken Caesar, Greek Tomato & Cucumber Salad</p>
+       <div class="break"></div>
+       <div class="column">
+         <div class="section">
+              <h2>Coffee</h2>
+              <p>Hot or Cold</p>
+              <h3>Espresso……………………………………S:$3, M:$3.50, L:$4</h3>
+              <h3>Cappuccino………………………………………S:$5, M:$5.50, L:$6</h3>
+              <h3>Ristretto……………………………………S:$5, M:$5.50, L:$6</h3>
+              <h3>Caffe Americano…………………………S:$2, M:$2.50, L:$3</h3>
+              <h3>Macchiato………………………………………S:$3, M:$3.50, L:$4</h3>
+              <h3>Mocha………………………………S:$6, M:$6.50, L:$7</h3>
+              <h3>Latte……………………………………S:$7, M:$7.50, L:$8</h3>
+          </div>
+         <div class="section">
+              <h2>Juices</h2>
+              <h3>Orange……………………………………S:$2, M:$2.50, L:$3</h3>
+              <h3>Apple……………………………………S:$3, M:$3.50, L:$4</h3>
+              <h3>Grape………………………………S:$4, M:$4.50, L:$5</h3>
+         </div>
        </div>
-       <div class="section">
-         <h2>Pasta</h2>
-         <h3>Spagetti……………………………$10</h3>
-         <p>Tomato sauce, Pesto sauce, or Alfredo sauce</p>
-         <h3>Carbonara……………………………$10</h3>
-         <h3>Ravioli……………………………$10</h3>
-         <p>Four cheese, Spinach, Beef, Mushroom</p>
-         <h3>Tortellini……………………………$10</h3>
+        <div class="column">
+         <div class="section">
+              <h2>Tea</h2>
+              <p>Hot or Cold</p>
+              <h3>Black Tea………………………………S:$3, M:$3.50, L:$4</h3>
+              <h3>Green Tea……………………………S:$3, M:$3.50, L:$4</h3>
+              <h3>Raspberry Tea……………………S:$3, M:$3.50, L:$4</h3>
+              <h3>Chamomile Tea……………………S:$3, M:$3.50, L:$4</h3>
+              <h3>Oolong Tea……………………………S:$2, M:$2.50, L:$3</h3>
+              <h3>Mint Tea………………………………S:$3, M:$3.50, L:$4</h3>
+              <h3>Jasmine Tea……………………………S:$3, M:$3.50, L:$4</h3>
+              <h3>Milk Tea……………………………S:$3, M:$3.50, L:$4</h3>
+         </div>
        </div>
-       <div class="section">
-          <h2>Italian pizza</h2>
-          <h3>Margherita……………………………………………………………$6</h3>
-          <p>Tomato, Basil Leaves, Mozzarella, Tomato Sauce, Salt, Extra-Virgin Olive Oil</p>
-          <h3>Chicago…………………………………………………………………..$6</h3>
-          <p>Tomato, Basil Leaves, Mozzarella, Tomato Sauce, Salt, Extra-Virgin Olive Oil</p>
-          <h3>Pepperoni……………………………………………………………….$6</h3>
-          <h3>Four Cheeses…………………………………………………………$6</h3>
-          <h3>Italian Meatball……………………………………………………..$6</h3>
-          <p>Italian Meatballs, Dollops of Ricotta, Mozzarella, Tomato Sauce, Pepperoni, Italian Sausage, Mushrooms</p>
-          <h3>Combo…………………………………………………………………….$6</h3>
-          <p>Mozzarella, Provolone Cheese, Tomato Sauce, Pepperoni, Italian Sausage, Mushrooms, Black Olives, Red Onions, Green Peppers</p>
-          <h3>Hawaiian…………………………………………………………………$6</h3>
-          <p>Mozzarella, Provolone Cheese, Tomato Sauce, Ham, Pineapple</p>
+     </div>
+       <div class="break"></div>
+       <div class="part">
+        <div class="img">
+          <img src="../images/pizza2.jpg"> <alt="pizza with lettuce">
+          <h1>Meals</h1>
+        </div>
+        <div class="break"></div>
+         <div class="column">
+          <div class="section">
+             <h2>Entrées</h2>
+             <h3>Hearty Breakfast……………………………$10</h3>
+             <p>Eggs, bacon, beans, cheese, blood sausage, toast</p>
+             <h3>Brushcetta……………………………$10</h3>
+             <h3>Lasagna……………………………$10</h3>
+             <h3>Stuffed shells……………………………$10</h3>
+             <h3>Risotto……………………………$10</h3>
+             <h3>Salad……………………………$10</h3>
+             <p>Caprese, Chicken Caesar, Greek Tomato & Cucumber Salad</p>
+           </div>
+           <div class="section">
+             <h2>Pasta</h2>
+             <h3>Spagetti……………………………$10</h3>
+             <p>Tomato sauce, Pesto sauce, or Alfredo sauce</p>
+             <h3>Carbonara……………………………$10</h3>
+             <h3>Ravioli……………………………$10</h3>
+             <p>Four cheese, Spinach, Beef, Mushroom</p>
+             <h3>Tortellini……………………………$10</h3>
+           </div>
+        </div>
+         <div class="column">
+           <div class="section">
+              <h2>Italian pizza</h2>
+              <h3>Margherita……………………………………………………………$6</h3>
+              <p>Tomato, Basil Leaves, Mozzarella, Tomato Sauce, Salt, Extra-Virgin Olive Oil</p>
+              <h3>Chicago…………………………………………………………………..$6</h3>
+              <p>Tomato, Basil Leaves, Mozzarella, Tomato Sauce, Salt, Extra-Virgin Olive Oil</p>
+              <h3>Pepperoni……………………………………………………………….$6</h3>
+              <h3>Four Cheeses…………………………………………………………$6</h3>
+              <h3>Italian Meatball……………………………………………………..$6</h3>
+              <p>Italian Meatballs, Dollops of Ricotta, Mozzarella, Tomato Sauce, Pepperoni, Italian Sausage, Mushrooms</p>
+              <h3>Combo…………………………………………………………………….$6</h3>
+              <p>Mozzarella, Provolone Cheese, Tomato Sauce, Pepperoni, Italian Sausage, Mushrooms, Black Olives, Red Onions, Green Peppers</p>
+              <h3>Hawaiian…………………………………………………………………$6</h3>
+              <p>Mozzarella, Provolone Cheese, Tomato Sauce, Ham, Pineapple</p>
+           </div>
+           <div class="section">
+             <h2>Sandwiches</h2>
+             <h3>Pesto Panini……………………………………………………$5</h3>
+             <p>Pesto sauce, Mozzarella, Tomato, Baguette, Basil leaves</p>
+             <h3>Ultimate Panini………………………………………………$8</h3>
+             <p>Baguette, Pesto sauce, Muenster cheese, Havarti cheese, Honey ham, Peppered turkey, Basil leaves, Spinanch, Onions, Tomato</p>
+             <h3>Chicken Sandwich…………………………………………$8</h3>
+             <p>Baguette, Rotisserie chicken, Bacon, Tomato, Lettuce, Onion, Mayonnaise, Mustard, Provolone cheese</p>
+             <h3>Pastrami Sandwich……………………………………….$8</h3>
+             <p>Rye bread, Pastrami, Sauerkraut, Pickles, Swiss cheese, Mayonnaise</p>
+             <h3>Meatball Sub…………………………………………………..$8</h3>
+             <p>Baguette, Beef meatballs, Tomato sauce, Shredded parmesan cheese, Provolone cheese</p>
+           </div>
        </div>
-       <div class="section">
-         <h2>Sandwiches</h2>
-         <h3>Pesto Panini……………………………………………………$5</h3>
-         <p>Pesto sauce, Mozzarella, Tomato, Baguette, Basil leaves</p>
-         <h3>Ultimate Panini………………………………………………$8</h3>
-         <p>Baguette, Pesto sauce, Muenster cheese, Havarti cheese, Honey ham, Peppered turkey, Basil leaves, Spinanch, Onions, Tomato</p>
-         <h3>Chicken Sandwich…………………………………………$8</h3>
-         <p>Baguette, Rotisserie chicken, Bacon, Tomato, Lettuce, Onion, Mayonnaise, Mustard, Provolone cheese</p>
-         <h3>Pastrami Sandwich……………………………………….$8</h3>
-         <p>Rye bread, Pastrami, Sauerkraut, Pickles, Swiss cheese, Mayonnaise</p>
-         <h3>Meatball Sub…………………………………………………..$8</h3>
-         <p>Baguette, Beef meatballs, Tomato sauce, Shredded parmesan cheese, Provolone cheese</p>
-       </div>
-      </main>
-      <footer>
-        <p>Copyright @ 2020 Pines of Nowhere</p>
-      </footer>
+     </div>
+     <div class="break"></div>
+    </main>
+    <footer>
+      <p>Copyright @ 2020 Pines of Nowhere</p>
+    </footer>
  </body>
 </html>
