--- a/p2/menu/index.html
+++ b/p2/menu/index.html
@@ -71,7 +71,6 @@
             <p>Vanilla, Strawberry, Chocolate, Pistachio, Coffee</p>
            </div>
          </div>
-         <div class="break"></div>
        </div>
        <div class="part">
        <div class="img">
@@ -79,7 +78,6 @@
        </div>
          <h1>Drinks</h1>
        </div>
-       <div class="break"></div>
        <div class="column">
          <div class="section">
               <h2>Coffee</h2>
@@ -114,13 +112,11 @@
          </div>
        </div>
      </div>
-       <div class="break"></div>
        <div class="part">
         <div class="img">
           <img src="../images/pizza2.jpg"> <alt="pizza with lettuce">
           <h1>Meals</h1>
         </div>
-        <div class="break"></div>
          <div class="column">
           <div class="section">
              <h2>Entrées</h2>
@@ -159,6 +155,7 @@
               <h3>Hawaiian…………………………………………………………………$6</h3>
               <p>Mozzarella, Provolone Cheese, Tomato Sauce, Ham, Pineapple</p>
            </div>
+          <div class="column">
            <div class="section">
              <h2>Sandwiches</h2>
              <h3>Pesto Panini……………………………………………………$5</h3>
@@ -172,9 +169,9 @@
              <h3>Meatball Sub…………………………………………………..$8</h3>
              <p>Baguette, Beef meatballs, Tomato sauce, Shredded parmesan cheese, Provolone cheese</p>
            </div>
+         </div>
        </div>
      </div>
-     <div class="break"></div>
     </main>
     <footer>
       <p>Copyright @ 2020 Pines of Nowhere</p>
